--- a/food-del/admin/src/index.css
+++ b/food-del/admin/src/index.css
@@ -18,3 +18,11 @@ hr {
     height: 1px;
     background-color: rgb(244, 248, 252);
 }
+.app-content {
+    display: flex;
+}
+.flex-col {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
