--- a/food-del/admin/src/components/pages/List/List.css
+++ b/food-del/admin/src/components/pages/List/List.css
@@ -1,14 +1,18 @@
 .list-table-format {
-    display: grid;
-    grid-template-columns: 0.5fr 2fr 1fr 0.5fr;
+    justify-content: space-between;
+    display: flex;
     align-items: center;
     gap: 10px;
     padding: 12px 15px;
     border: 1px solid #e1e1e1;
+    color: black;
     font-size: 13px;
 }
 .list-table-format.title {
+    display: flex;
     background-color: #e1e1e1;
+    color: black;
+    justify-content: space-between;
 }
 .list-table-format img {
     width: 50px;
