--- a/food-del/frontend/src/components/Navbar/Navbar.css
+++ b/food-del/frontend/src/components/Navbar/Navbar.css
@@ -52,6 +52,38 @@
     background-color: red;
     border-radius: 50%;
 }
+.navbar-profile {
+    position: relative;
+}
+.nav-profile-dropdown {
+    position: absolute;
+    display: none;
+    right: 0;
+    z-index: 1;
+}
+.navbar-profile:hover .nav-profile-dropdown{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    background-color: #f9f7f7;
+    padding: 12px 25px;
+    border-radius: 4px;
+    border: 1px solid rgb(255, 25, 25);
+    outline: 2px solid white;
+    list-style: none;
+}
+.nav-profile-dropdown li {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    cursor: pointer;
+}
+.nav-profile-dropdown img {
+    width: 20px;
+}
+.nav-profile-dropdown li:hover{
+    color: #f71919;
+}
 @media (max-width: 1050px){
     .navbar .logo {
         width: 140px;
